test/release/examples/spec/Classes/duplicate-management.good
duplicate-management.chpl:2: error: Type expression uses multiple class kinds: borrowed unmanaged
