test/release/examples/spec/Classes/duplicate-management.chpl
class C { }
var x: borrowed unmanaged C;

   
